--- a/photovel/WebContent/WEB-INF/web.xml
+++ b/photovel/WebContent/WEB-INF/web.xml
@@ -17,16 +17,18 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
-
-  <servlet-mapping>
+<!--  <servlet-mapping>
+ 	<servlet-name>dispatcher</servlet-name>
+	<url-pattern>*.jsp</url-pattern>
+    </servlehttps://github.com/kirtimukha/git.gitt-mapping>
+    <servlet-mapping>
 	<servlet-name>dispatcher</servlet-name>
 	<url-pattern>*.html</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  <servlet-name>dispatcher</servlet-name>
+    </servlet-mapping> -->
+    <servlet-mapping>
+    <servlet-name>dispatcher</servlet-name>
 	<url-pattern>/</url-pattern>
-  </servlet-mapping>
-  
+    </servlet-mapping>
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
