--- a/photovel/WebContent/WEB-INF/web.xml
+++ b/photovel/WebContent/WEB-INF/web.xml
@@ -17,14 +17,10 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
-<!--  <servlet-mapping>
- 	<servlet-name>dispatcher</servlet-name>
-	<url-pattern>*.jsp</url-pattern>
-    </servlehttps://github.com/kirtimukha/git.gitt-mapping>
-    <servlet-mapping>
-	<servlet-name>dispatcher</servlet-name>
-	<url-pattern>*.html</url-pattern>
-    </servlet-mapping> -->
+	<context-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <param-value>/WEB-INF/context/*Context.xml</param-value>
+	</context-param>
     <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
 	<url-pattern>/</url-pattern>
