--- a/photovel/WebContent/WEB-INF/web.xml
+++ b/photovel/WebContent/WEB-INF/web.xml
@@ -33,4 +33,22 @@
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+    <!-- PUT DELETE METHOD ERROR  -->
+  <filter>
+        <filter-name>hiddenHttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+  </filter>
+  <filter-mapping>
+      <filter-name>hiddenHttpMethodFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+        <filter-name>HttpPutFormContentFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HttpPutFormContentFilter</filter-class>
+  </filter>
+  <filter-mapping>
+      <filter-name>HttpPutFormContentFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <!--  // PUT, DELETE METHOD ERROR -->
 </web-app>
